<resources>
    <string name="app_name">course</string>

    <string name="login">Телефон или почта</string>
    <string name="password">Пароль</string>
    <string name="cb_remember">Запомнить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="btn_entry">Войти</string>
    <string name="entry_without_auth">Войти без авторизации</string>
    <string name="not_account">Нет аккаунта?</string>
    <string name="create_account"><u>Создать аккаунт</u></string>

    <string name="name">Введите имя</string>
    <string name="phone">Введите телефон или почту</string>
    <string name="entry_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registration">Регистрация</string>

    <string name="entry_code">Введите код</string>
    <string name="send_code">Отправить код</string>
    <string name="btn_verify">Подтвердить</string>
    <string name="input_sms_code">Введите код из SMS</string>
    <string name="input_email_code">Введите код из почты</string>
    <string name="repeat_code">Повторно отправить код</string>

    <string name="entry_new_password">Введите новый пароль</string>

    <string name="home_menu">Главная</string>
    <string name="category_menu">Категории</string>
    <string name="amounts_menu">Счета</string>
    <string name="settings_menu">Настройки</string>

    <string name="range_date">Период</string>
    <string name="day_date">День</string>
    <string name="week_date">Неделя</string>
    <string name="month_date">Месяц</string>
    <string name="year_date">Год</string>
    <string name="all_time_date">Все время</string>

    <string name="incomes">Доходы</string>
    <string name="expenses">Расходы</string>
    <string name="general">Общий</string>
    <string name="default_sum">0$</string>
    <string name="salary_cat">Зарплата</string>
    <string name="present_cat">Подарки</string>
    <string name="invest_cat">Инвестиции</string>

    <string name="must_exp">Обязательные</string>
    <string name="no_must_exp">Необязательные</string>

    <string name="name_add_dialog">Название</string>
    <string name="sum_add_dialog">Сумма</string>
    <string name="date_add_dialog">Дата</string>
    <string name="income_add_dialog">Доходы</string>
    <string name="expense_add_dialog">Расходы</string>

    <string name="add_category_text">Добавить категорию</string>

    <string name="add_category_name">Название категории</string>
    <string name="add_colors">Цвет</string>
    <string name="add_icon">Иконка</string>
    <string name="add_category_btn">Добавить</string>

    <string name="add_sub_category">Добавить подкатегорию</string>
    <string name="name_sub_category">Название подкатегории</string>

    <string name="edit_sum_dialog">Введите сумму на счете</string>
    <string name="change_sum_dialog_btn">Изменить</string>
    <string name="delete_item">Удалить</string>
    <string name="chose_delete_item">Выберите категорию</string>
</resources>