<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.Authorization">


    <ImageView
        android:id="@+id/bg_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bg_authorization"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bg_authorization"
        />

    <EditText
        android:id="@+id/login"
        style="@style/EditText"
        android:hint="@string/login"
        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/ic_user"
        android:paddingRight="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_authorization" />

    <EditText
        android:id="@+id/password"
        style="@style/EditText"
        android:hint="@string/password"
        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_lock"
        android:paddingRight="15dp"
        android:inputType="textPassword"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/under_password_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password">

        <CheckBox
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:buttonTint="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_remember"
            android:textColor="@color/white"

            android:layout_marginLeft="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:clickable="true" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/BtnAuthReg"
        style="@style/BtnAuthReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_entry"
        android:background="@drawable/shape_btn_auth_reg"

        app:layout_constraintTop_toBottomOf="@id/under_password_line"
        app:layout_constraintLeft_toLeftOf="@id/under_password_line"
        app:layout_constraintRight_toRightOf="@id/under_password_line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/entry_as_guest"
        android:textColor="@color/white"
        android:clickable="true"

        app:layout_constraintLeft_toLeftOf="@id/BtnAuthReg"
        app:layout_constraintTop_toBottomOf="@id/BtnAuthReg"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/BtnAuthReg"
        app:layout_constraintRight_toRightOf="@id/BtnAuthReg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_account"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/reg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_marginLeft="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>