<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/bg_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bg_authorization"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bg_authorization"
        />

    <EditText
        android:id="@+id/name"
        style="@style/EditText"
        android:hint="@string/name"

        android:maxLength="20"
        android:maxLines="1"
        android:inputType="text"

        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/ic_user"
        android:paddingRight="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_authorization"/>

    <EditText
        android:id="@+id/login_reg"
        style="@style/EditText"

        android:maxLines="1"
        android:inputType="text"

        android:hint="@string/phone"
        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_phone"
        android:paddingRight="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>

    <EditText
        android:id="@+id/password"
        style="@style/EditText"
        android:hint="@string/entry_password"

        android:maxLength="20"
        android:maxLines="1"

        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_lock"
        android:paddingRight="15dp"
        android:inputType="textPassword"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_reg"/>

    <EditText
        android:id="@+id/repeat_password"
        style="@style/EditText"
        android:hint="@string/repeat_password"

        android:maxLength="20"
        android:maxLines="1"

        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_lock"
        android:paddingRight="15dp"
        android:inputType="textPassword"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BtnAuthReg"
        android:text="@string/registration"
        android:background="@drawable/shape_btn_auth_reg"

        app:layout_constraintLeft_toLeftOf="@id/repeat_password"
        app:layout_constraintRight_toRightOf="@id/repeat_password"
        app:layout_constraintTop_toTopOf="@id/repeat_password"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_arrow_btn"
        android:layout_marginBottom="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>