<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/dialog_add_new_item_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="1000dp"
    android:background="@drawable/shape_bg_dialog"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btn_close_add_dialog"
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:background="@drawable/ic_cross"

        android:layout_marginTop="17dp"
        android:layout_marginRight="10dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageButton>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sum_and_date_layout_add_dialog"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:weightSum="2"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/btn_close_add_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/sum_add_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/sum_add_dialog"
            style="@style/boldFont_16">
        </TextView>

        <TextView
            android:id="@+id/date_add_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_add_dialog"
            style="@style/boldFont_16">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sum_and_date_layout_edit_add_dialog"
        android:layout_width="268dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/sum_and_date_layout_add_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/sum_edit_text_add_dialog"
            android:layout_width="129dp"
            android:layout_height="30dp"

            style="@style/edit_text_dialog_add"
            android:background="@drawable/shape_edit_text_add_dialog">
        </EditText>

        <EditText
            android:id="@+id/date_edit_text_add_dialog"
            android:layout_width="129dp"
            android:layout_height="30dp"

            android:layout_marginLeft="10dp"

            android:drawableRight="@drawable/ic_date"
            android:paddingRight="7dp"

            style="@style/edit_text_dialog_add"
            android:background="@drawable/shape_edit_text_add_dialog">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RadioGroup
        android:id="@+id/radio_income_expense"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@id/sum_and_date_layout_edit_add_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/income_rb"
            android:checked="true"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/incomes">
        </RadioButton>

        <RadioButton
            android:id="@+id/expense_rb"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/expenses">
        </RadioButton>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_item_recycler"
        android:layout_width="268dp"
        android:layout_height="100dp"

        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintTop_toBottomOf="@id/radio_income_expense"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>