<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="286dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btn_close_dialog_add_sub_category"
        android:layout_width="25dp"
        android:layout_height="25dp"

        android:layout_marginTop="17dp"
        android:layout_marginRight="10dp"

        android:background="@drawable/ic_cross"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </ImageButton>

    <TextView
        android:id="@+id/name_add_category_income"

        style="@style/boldFont_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/name_sub_category"

        app:layout_constraintTop_toBottomOf="@id/btn_close_dialog_add_sub_category"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <EditText
        android:id="@+id/name_add_sub_category_edit"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edit_text_add_dialog"

        android:maxLength="20"
        android:maxLines="1"
        android:inputType="text"

        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"

        android:paddingLeft="10dp"
        android:layout_marginTop="7dp"

        app:layout_constraintTop_toBottomOf="@id/name_add_category_income"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </EditText>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sum_and_date_layout_add_dialog"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:weightSum="2"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/name_add_sub_category_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/sum_add_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/sum_add_dialog"
            style="@style/boldFont_16">
        </TextView>

        <TextView
            android:id="@+id/date_add_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_add_dialog"
            style="@style/boldFont_16">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sum_and_date_layout_edit_add_dialog"
        android:layout_width="266dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/sum_and_date_layout_add_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/sum_edit_text_add_dialog"
            android:layout_width="128dp"
            android:layout_height="40dp"

            style="@style/edit_text_dialog_add"
            android:background="@drawable/shape_edit_text_add_dialog">
        </EditText>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">

                <EditText
                    android:id="@+id/date_edit_text_add_dialog"
                    style="@style/edit_text_dialog_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/shape_edit_text_add_dialog"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </EditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sub_category_date_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:clickable="true"
                    android:src="@drawable/ic_date"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="5dp">

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/add_sub_category_btn"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_add_category_btn"

        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_category_btn"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"


        app:layout_constraintTop_toBottomOf="@id/sum_and_date_layout_edit_add_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>